[package]
name = "arb-bot-solana-100x"
version = "0.1.0"
edition = "2024"

[dependencies]
uint = { version = "0.9.1", default-features = false }
anyhow = "1.0.99"
solana-sdk = "2.2.1"
tungstenite = "0.27.0"
bincode = "1.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.12.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"fmt",
	"json",
	"time",
] }
uuid = { version = "1", features = ["v4"] }
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = { version = "6.0.0", default-features = false }
futures = "0.3.31"
futures-core = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
